--- a/app/src/main/res/layout/activity_form_mat5.xml
+++ b/app/src/main/res/layout/activity_form_mat5.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mat1">
+    tools:context=".formMat5">
 
     <LinearLayout
         android:layout_width="409dp"
@@ -15,61 +15,46 @@
         tools:layout_editor_absoluteY="1dp">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cuestionario matematicas"
+            android:textAlignment="center"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/textView16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView17"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-black"
-            android:text="Matemáticas"
-            android:textAlignment="center"
-            android:textColor="#2196F3"
-            android:textSize="24sp" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cualés son las operaciones básicas conocidas?" />
+            android:text="¿Qué tipo de números son los números primos?  " />
 
         <CheckBox
-            android:id="@+id/chk_num1"
+            android:id="@+id/chk_mat51"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Suma" />
+            android:text="Números naturales mayores que 1 que solo tienen dos divisores (1 y sí mismos) " />
 
         <CheckBox
-            android:id="@+id/chk_num2"
+            android:id="@+id/chk_mat52"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Resta" />
+            android:text="Números negativos " />
 
         <CheckBox
-            android:id="@+id/chk_num3"
+            android:id="@+id/chk_mat53"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Multiplicación" />
-
-        <CheckBox
-            android:id="@+id/chk_num4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="División" />
-
-        <CheckBox
-            android:id="@+id/chk_num5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Decimales" />
+            android:text="Números enteros " />
 
         <Button
-            android:id="@+id/btn_preg2"
+            android:id="@+id/btn_mat51"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Siguiente" />
-
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
