--- a/app/src/main/res/layout/activity_form_mat4.xml
+++ b/app/src/main/res/layout/activity_form_mat4.xml
@@ -23,7 +23,7 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/lbl_mat4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
