--- a/app/src/main/res/layout/activity_form_ing4.xml
+++ b/app/src/main/res/layout/activity_form_ing4.xml
@@ -34,17 +34,18 @@
             android:text="Cómo se dice espejo?" />
 
         <RadioGroup
+            android:id="@+id/rgRespuesta4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <RadioButton
-                android:id="@+id/radioButton7"
+                android:id="@+id/rgTrue4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Mirror" />
 
             <RadioButton
-                android:id="@+id/radioButton8"
+                android:id="@+id/rgFalse4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Reflect" />
