--- a/app/src/main/res/layout/activity_form_ing1.xml
+++ b/app/src/main/res/layout/activity_form_ing1.xml
@@ -34,17 +34,18 @@
             android:text="Cómo se dice auto?" />
 
         <RadioGroup
+            android:id="@+id/rgRespuesta1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <RadioButton
-                android:id="@+id/radioButton"
+                android:id="@+id/rgTrue1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Car" />
 
             <RadioButton
-                android:id="@+id/radioButton2"
+                android:id="@+id/rgFalse1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Carr" />
